// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Borderless Button renders 1`] = `
.c0.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  font-weight: 500;
  font-size: 14px;
  white-space: nowrap;
  word-break: keep-all;
  cursor: pointer;
  pointer-events: auto;
  padding: 8px;
  transition: all 150ms;
  background-color: rgba(255,255,255,0.0);
  color: #00AB44;
  border-width: 1px;
  border-style: solid;
  border-color: rgba(255,255,255,0.0);
  border-radius: 4px;
  box-sizing: border-box;
  text-decoration: none;
}

.c0.c0>span {
  text-transform: lowercase;
  margin-left: 0px;
}

.c0.c0>span::first-letter {
  text-transform: uppercase;
}

.c0.c0:hover {
  border-color: rgba(255,255,255,0.0);
  background-color: rgba(255,255,255,0.0);
  color: #00CD51;
  text-decoration: none;
}

.c0.c0:hover .button-icon {
  fill: #00CD51;
}

.c0.c0:active {
  border-color: rgba(255,255,255,0.0);
  background-color: rgba(255,255,255,0.0);
  color: #00CD51;
  box-shadow: inset 0 4px 4px rgba(0,0,0,0.25);
}

.c0.c0:focus {
  outline: none;
}

.c0.c0 .button-icon {
  height: 16px;
  width: 16px;
  fill: #00AB44;
}

.c0.c0 .ntd-spinner {
  fill: none;
  stroke-width: 17px;
  stroke-dasharray: 100;
  stroke-dashoffset: 100;
  animation: ntd-draw 1s linear infinite;
  stroke: #00AB44;
  width: 24px;
}

.c0.c0 .path {
  stroke: #00AB44;
}

<button
  class="c0"
  colors="[object Object]"
  flavour="borderless"
  padding="2"
  texttransform="firstLetter"
>
  <span>
    Test prop text
  </span>
</button>
`;

exports[`Button states renders loading icon 1`] = `
.c0.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  font-weight: 500;
  font-size: 14px;
  white-space: nowrap;
  word-break: keep-all;
  cursor: pointer;
  pointer-events: auto;
  padding: 8px;
  transition: all 150ms;
  background-color: #00AB44;
  color: #F6F7F7;
  border-width: 1px;
  border-style: solid;
  border-color: #00AB44;
  border-radius: 4px;
  box-sizing: border-box;
  text-decoration: none;
}

.c0.c0>span {
  text-transform: lowercase;
  margin-left: 4px;
}

.c0.c0>span::first-letter {
  text-transform: uppercase;
}

.c0.c0:hover {
  border-color: #42B861;
  background-color: #42B861;
  color: #F6F7F7;
  text-decoration: none;
}

.c0.c0:hover .button-icon {
  fill: #F6F7F7;
}

.c0.c0:active {
  border-color: #00CD51;
  background-color: #00CD51;
  color: #F6F7F7;
  box-shadow: inset 0 4px 4px rgba(0,0,0,0.25);
}

.c0.c0:focus {
  outline: none;
}

.c0.c0 .button-icon {
  height: 16px;
  width: 16px;
  fill: #F6F7F7;
}

.c0.c0 .ntd-spinner {
  fill: none;
  stroke-width: 17px;
  stroke-dasharray: 100;
  stroke-dashoffset: 100;
  animation: ntd-draw 1s linear infinite;
  stroke: #F6F7F7;
  width: 24px;
}

.c0.c0 .path {
  stroke: #F6F7F7;
}

.c1 {
  fill: none;
  stroke-width: 17px;
  stroke-dasharray: 100;
  stroke-dashoffset: 100;
  animation: ntd-draw 1s linear infinite;
  stroke: #FFFFFF;
  width: 24px;
}

.c1 .path {
  stroke: #FFFFFF;
}

<button
  class="c0"
  colors="[object Object]"
  padding="2"
  texttransform="firstLetter"
>
  <svg
    class="c1 button-icon"
    version="1.1"
    viewBox="0 0 21 17"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      class="path"
      fill="none"
      fill-rule="evenodd"
      stroke="none"
      stroke-width="1"
    >
      <path
        d="M2,1 C8.25086152,1 11.9367136,1 13.0575562,1 C14.73882,1 19.6834591,2 19.9614325,7.72050108 C20.239406,13.4410022 15.7459591,15.1224845 13.6463763,15.1224845 C12.2466545,15.1224845 10.0279195,15.1224845 6.9901715,15.1224845 L2,1 Z"
        id="Path-2"
        stroke-width="2"
      />
    </g>
  </svg>
  <span>
    Test prop text
  </span>
</button>
`;

exports[`Button states renders only icon 1`] = `
.c0.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  font-weight: 500;
  font-size: 14px;
  white-space: nowrap;
  word-break: keep-all;
  cursor: pointer;
  pointer-events: auto;
  padding: 8px;
  transition: all 150ms;
  background-color: rgba(255,255,255,0.0);
  color: #00AB44;
  border-width: 1px;
  border-style: solid;
  border-color: #00AB44;
  border-radius: 4px;
  box-sizing: border-box;
  text-decoration: none;
}

.c0.c0>span {
  text-transform: lowercase;
  margin-left: 4px;
}

.c0.c0>span::first-letter {
  text-transform: uppercase;
}

.c0.c0:hover {
  border-color: #00AB44;
  background-color: #DDFFEB;
  color: #00AB44;
  text-decoration: none;
}

.c0.c0:hover .button-icon {
  fill: #00AB44;
}

.c0.c0:active {
  border-color: #00AB44;
  background-color: #DDFFEB;
  color: #00AB44;
  box-shadow: inset 0 4px 4px rgba(0,0,0,0.25);
}

.c0.c0:focus {
  outline: none;
}

.c0.c0 .button-icon {
  height: 16px;
  width: 16px;
  fill: #00AB44;
}

.c0.c0 .ntd-spinner {
  fill: none;
  stroke-width: 17px;
  stroke-dasharray: 100;
  stroke-dashoffset: 100;
  animation: ntd-draw 1s linear infinite;
  stroke: #00AB44;
  width: 24px;
}

.c0.c0 .path {
  stroke: #00AB44;
}

.c2 {
  height: 16px;
  width: 16px;
  opacity: 1;
  pointer-events: unset;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: auto;
  height: 100%;
  color: #526161;
}

<button
  class="c0"
  colors="[object Object]"
  flavour="hollow"
  padding="2"
  texttransform="firstLetter"
>
  <div
    alignitems="center"
    class="c1"
    height="100%"
    justifycontent="center"
    width="auto"
  >
    <svg
      class="c2 button-icon"
      title="plus"
    >
      <use
        xlink:href="#undefined"
      />
    </svg>
  </div>
</button>
`;

exports[`Button states renders smaller only icon 1`] = `
.c0.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  font-weight: 500;
  font-size: 12px;
  white-space: nowrap;
  word-break: keep-all;
  cursor: pointer;
  pointer-events: auto;
  padding: 4px 12px;
  transition: all 150ms;
  background-color: rgba(255,255,255,0.0);
  color: #00AB44;
  border-width: 1px;
  border-style: solid;
  border-color: #00AB44;
  border-radius: 4px;
  box-sizing: border-box;
  text-decoration: none;
}

.c0.c0>span {
  text-transform: lowercase;
  margin-left: 4px;
}

.c0.c0>span::first-letter {
  text-transform: uppercase;
}

.c0.c0:hover {
  border-color: #00AB44;
  background-color: #DDFFEB;
  color: #00AB44;
  text-decoration: none;
}

.c0.c0:hover .button-icon {
  fill: #00AB44;
}

.c0.c0:active {
  border-color: #00AB44;
  background-color: #DDFFEB;
  color: #00AB44;
  box-shadow: inset 0 4px 4px rgba(0,0,0,0.25);
}

.c0.c0:focus {
  outline: none;
}

.c0.c0 .button-icon {
  height: 16px;
  width: 16px;
  fill: #00AB44;
}

.c0.c0 .ntd-spinner {
  fill: none;
  stroke-width: 17px;
  stroke-dasharray: 100;
  stroke-dashoffset: 100;
  animation: ntd-draw 1s linear infinite;
  stroke: #00AB44;
  width: 24px;
}

.c0.c0 .path {
  stroke: #00AB44;
}

.c2 {
  height: 16px;
  width: 16px;
  opacity: 1;
  pointer-events: unset;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: auto;
  height: 100%;
  color: #526161;
}

<button
  class="c0"
  colors="[object Object]"
  flavour="hollow"
  padding="1,3"
  texttransform="firstLetter"
>
  <div
    alignitems="center"
    class="c1"
    height="100%"
    justifycontent="center"
    width="auto"
  >
    <svg
      class="c2 button-icon"
      title="plus"
    >
      <use
        xlink:href="#undefined"
      />
    </svg>
  </div>
</button>
`;

exports[`Default Button renders 1`] = `
.c0.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  font-weight: 500;
  font-size: 14px;
  white-space: nowrap;
  word-break: keep-all;
  cursor: pointer;
  pointer-events: auto;
  padding: 8px;
  transition: all 150ms;
  background-color: #00AB44;
  color: #F6F7F7;
  border-width: 1px;
  border-style: solid;
  border-color: #00AB44;
  border-radius: 4px;
  box-sizing: border-box;
  text-decoration: none;
}

.c0.c0>span {
  text-transform: full-width;
  margin-left: 0px;
}

.c0.c0:hover {
  border-color: #42B861;
  background-color: #42B861;
  color: #F6F7F7;
  text-decoration: none;
}

.c0.c0:hover .button-icon {
  fill: #F6F7F7;
}

.c0.c0:active {
  border-color: #00CD51;
  background-color: #00CD51;
  color: #F6F7F7;
  box-shadow: inset 0 4px 4px rgba(0,0,0,0.25);
}

.c0.c0:focus {
  outline: none;
}

.c0.c0 .button-icon {
  height: 16px;
  width: 16px;
  fill: #F6F7F7;
}

.c0.c0 .ntd-spinner {
  fill: none;
  stroke-width: 17px;
  stroke-dasharray: 100;
  stroke-dashoffset: 100;
  animation: ntd-draw 1s linear infinite;
  stroke: #F6F7F7;
  width: 24px;
}

.c0.c0 .path {
  stroke: #F6F7F7;
}

<button
  class="c0"
  colors="[object Object]"
  padding="2"
  texttransform="fullWidth"
>
  <span>
    Test prop text
  </span>
</button>
`;

exports[`Hollow Button renders 1`] = `
.c0.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  font-weight: 500;
  font-size: 14px;
  white-space: nowrap;
  word-break: keep-all;
  cursor: pointer;
  pointer-events: auto;
  padding: 8px;
  transition: all 150ms;
  background-color: rgba(255,255,255,0.0);
  color: #00AB44;
  border-width: 1px;
  border-style: solid;
  border-color: #00AB44;
  border-radius: 4px;
  box-sizing: border-box;
  text-decoration: none;
}

.c0.c0>span {
  text-transform: lowercase;
  margin-left: 0px;
}

.c0.c0>span::first-letter {
  text-transform: uppercase;
}

.c0.c0:hover {
  border-color: #00AB44;
  background-color: #DDFFEB;
  color: #00AB44;
  text-decoration: none;
}

.c0.c0:hover .button-icon {
  fill: #00AB44;
}

.c0.c0:active {
  border-color: #00AB44;
  background-color: #DDFFEB;
  color: #00AB44;
  box-shadow: inset 0 4px 4px rgba(0,0,0,0.25);
}

.c0.c0:focus {
  outline: none;
}

.c0.c0 .button-icon {
  height: 16px;
  width: 16px;
  fill: #00AB44;
}

.c0.c0 .ntd-spinner {
  fill: none;
  stroke-width: 17px;
  stroke-dasharray: 100;
  stroke-dashoffset: 100;
  animation: ntd-draw 1s linear infinite;
  stroke: #00AB44;
  width: 24px;
}

.c0.c0 .path {
  stroke: #00AB44;
}

<button
  class="c0"
  colors="[object Object]"
  flavour="hollow"
  padding="2"
  texttransform="firstLetter"
>
  <span>
    Test prop text
  </span>
</button>
`;
